[gd_scene load_steps=11 format=3 uid="uid://dxari6vm8lkmh"]

[ext_resource type="Script" uid="uid://dengp85k58bvo" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://c0k5smcwm6xdd" path="res://player.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://df2j1s5x27xm8" path="res://goblins/goblin_base.tscn" id="2_7mycd"]
[ext_resource type="Resource" uid="uid://d3n1lsxvpuqn4" path="res://resources/goblin_type_resource.tres" id="2_272bh"]
[ext_resource type="TileSet" uid="uid://b2bke3bxnu16y" path="res://terrain_tileset.tres" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://csitsj7rw2po6" path="res://animated_cursor.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://b2f148a74gry3" path="res://texture_progress_bar.gd" id="7_272bh"]
[ext_resource type="Texture2D" uid="uid://c02ome8dto14" path="res://art/ui/healthbarUnder.png" id="7_kek77"]
[ext_resource type="Texture2D" uid="uid://dsxl4jwtlp7wq" path="res://art/ui/healthbarProgress.png" id="8_4c57u"]
[ext_resource type="PackedScene" path="res://hearts_container.tscn" id="10_4c57u"]

[node name="Main" type="Node"]
physics_interpolation_mode = 1
script = ExtResource("1_h2yge")
goblin_resource = ExtResource("2_272bh")
goblin_base_scene = ExtResource("2_7mycd")

[node name="Map" type="ColorRect" parent="."]
visible = false
offset_left = -1920.0
offset_top = -1080.0
offset_right = 1920.0
offset_bottom = 1080.0
metadata/_edit_lock_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_1bvp3")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_1bvp3")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_0xm2m")]

[node name="GameTime" type="Timer" parent="."]
wait_time = 1e+09
autostart = true

[node name="Cursor" parent="." instance=ExtResource("5_lquwl")]
visible = false
scale = Vector2(0.2, 0.2)
speed_scale = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player", "roundtimer")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -154.0
offset_right = 184.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
max_value = 60.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("7_kek77")
texture_progress = ExtResource("8_4c57u")
script = ExtResource("7_272bh")
player = NodePath("../../Player")
roundtimer = NodePath("../../RoundTimer")

[node name="HeartsContainer" parent="CanvasLayer" instance=ExtResource("10_4c57u")]

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
